updated with database

--- a/src/app/courses/course-description/course-description.component.html
+++ b/src/app/courses/course-description/course-description.component.html
@@ -1,6 +1,6 @@
 <div class="panel-header panel-header-md colorbg">
   <div class="header text-center">
-    <h2 class="title">{{course.title}}</h2>
+    <h2 class="title">{{course.name}}</h2>
   </div>
 </div>
 
