--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -12,9 +12,9 @@
       <div class="card">
         <img class="card-img-top" src="../assets/img/bg5.jpg" alt="Card image cap">
         <div class="card-body">
-          <h4 class="card-title">EVA 2/18</h4>
-          <p class="card-text">Curso de la materia de entornos virtuales de aprendizaje para la gestion 2- 2018.</p>
-          <a [routerLink]="['/course-description', course]" class="btn btn-primary">Mas informacion</a>
+          <h4 class="card-title">{{course.name}}</h4>
+          <p class="card-text">{{course.description}}</p>
+          <a [routerLink]="['/course-description', course.id]" class="btn btn-primary">Mas informacion</a>
         </div>
       </div>
     </div>
