--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -3,7 +3,7 @@
 <div class="main-content">
   <div class="row">
     <div class="col-md-12">
-      <div class="card">
+      <div class="card" >
         <div class="card-header">
           <h5 class="title">Crear Tarea</h5>
         </div>
@@ -57,8 +57,10 @@
             <th>
               Titulo
             </th>
-            <th class="text-right">
-              Fecha Entrega
+            <th >
+              Fecha Limite
+            </th>
+            <th *ngIf="user.role === student">
             </th>
           </thead>
           <tbody>
@@ -71,6 +73,13 @@
               </td>
               <td>
                 task.deliveryDate
+              </td>
+              <td *ngIf="!task.status">
+                <div class="btn-group" >
+                  <button type="button" class="btn btn-primary" (click)="deliveryTask(task.id)">
+                    <span aria-hidden="true"></span> Presentar
+                  </button>
+                </div>
               </td>
             </tr>
           </tbody>
