Implementation-Create-New-Course

--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -3,6 +3,7 @@
     <h2 class="title">Cursos</h2>
     <p class="category">Lista de cursos disponibles
     </p>
+    <a [routerLink]="['/course-register']" class="btn btn-primary">Crear Curso</a>
   </div>
 </div>
 
