--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -3,7 +3,7 @@
 <div class="main-content">
   <div class="row" *ngIf="!studentRole">
     <div class="col-md-12">
-      <div class="card" >
+      <div class="card">
         <div class="card-header">
           <h5 class="title">Crear Tarea</h5>
         </div>
@@ -12,6 +12,12 @@
             <div class="row">
               <div class="col-md-5 pr-1">
                 <div class="form-group">
+                  <div class="form-group">
+                      <span class="input-group-addon" id="curso">Selecciona un curso:</span>
+                    <select [(ngModel)]="task.course" [ngModelOptions]="{standalone: true}">
+                      <option *ngFor="let course of courses" value="course">{{course.name}}</option>
+                    </select>
+                  </div>
                   <div class="form-group">
                     <span class="input-group-addon" id="titulo">Titulo</span>
                     <input type="text" class="form-control" placeholder="Titulo" aria-describedby="titulo" [(ngModel)]="task.title"
@@ -57,7 +63,7 @@
             <th>
               Titulo
             </th>
-            <th >
+            <th>
               Fecha Limite
             </th>
             <th>
@@ -75,7 +81,7 @@
                 {{task.deliveryDate}}
               </td>
               <td>
-                <div class="btn-group" >
+                <div class="btn-group">
                   <button type="button" class="btn btn-primary" *ngIf="studentRole" [routerLink]="['/deliver-task', task.id]">
                     <span aria-hidden="true"></span> Redactar
                   </button>
