Change routing in Create Exam

--- a/src/app/courses/course-description/course-description.component.html
+++ b/src/app/courses/course-description/course-description.component.html
@@ -24,6 +24,7 @@
             </tbody>
           </table>
           <a class=" float-right btn boton">Registrarse al curso</a>
+          <a class=" float-right btn boton" [routerLink]="['/register-exam', course.id]">Crear un examen</a>
         </div>
       </div>
     </div>
