--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -16,6 +16,7 @@
           <h4 class="card-title">{{course.name}}</h4>
           <p class="card-text">{{course.description}}</p>
           <a [routerLink]="['/course-description', course.id]" class="btn btn-primary">Mas informacion</a>
+          <a [routerLink]="['/register-exam', course.id]" class="btn btn-primary">Crear un Examen</a>
         </div>
       </div>
     </div>
