added course dropdown and calification view

--- a/src/app/courses/course-description/course-description.component.html
+++ b/src/app/courses/course-description/course-description.component.html
@@ -23,7 +23,7 @@
               </tr>
             </tbody>
           </table>
-          <a class=" float-right btn boton">Registrarse al curso</a>
+          <a class=" float-right btn boton" (click)="register()">Registrarse al curso</a>
         </div>
       </div>
     </div>
