--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -15,7 +15,7 @@
         <div class="card-body">
           <h4 class="card-title">{{course.name}}</h4>
           <p class="card-text">{{course.description}}</p>
-          <a [routerLink]="['/course-description', course.id]" class="btn btn-primary">Mas informacion</a>
+          <a [routerLink]="['/course-description', course.courseId]" class="btn btn-primary">Mas informacion</a>
         </div>
       </div>
     </div>
