--- a/src/app/courses/course-students-list/course-students-list.component.html
+++ b/src/app/courses/course-students-list/course-students-list.component.html
@@ -24,7 +24,8 @@
             <tbody>
               <tr *ngFor="let student of students">
                 <td>
-                  {{student.name}}
+                  {{student.firstName}}
+                  {{student.lastName}}
                 </td>
                 <td>
                   <input type="number" class="form-control" aria-describedby="nota" [(ngModel)]="student.grade"
@@ -32,7 +33,7 @@
                 </td>
                 <td>
                   <div class="btn-group">
-                    <button type="button" class="btn btn-primary" (click)="calificar(student.id)">
+                    <button type="button" class="btn btn-primary" (click)="calificar(student)">
                       <span aria-hidden="true"></span> Calificar
                     </button>
                   </div>
