--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -31,7 +31,7 @@
         </li>
         <li class="nav-item" ngbDropdown>
           <a class="nav-link" id="dropdownBasic1" ngbDropdownToggle>
-            <i class="now-ui-icons users_single-02"></i>
+            <i class="now-ui-icons users_single-02"></i> {{userRole}}
             <p>
               <span class="d-lg-none d-md-block">Cuenta</span>
             </p>
