--- a/src/app/exam/exam-register/exam-register.component.html
+++ b/src/app/exam/exam-register/exam-register.component.html
@@ -21,11 +21,15 @@
                                     [(ngModel)]="value.description" name="description"></textarea>
                             </div>
                             <div class="form-group col-md-12">
-                                <div class="col-md-6 pull-right">
-                                    <span class="input-group-addon col-md-4" id="basic-addon1">Hora</span>
-                                    <ngb-timepicker [(ngModel)]="time" [meridian]="true" name="time"></ngb-timepicker>
+                                <div class="col-md-4 pull-right">
+                                    <span class="input-group-addon col-md-4" id="basic-addon1">Hora Fin</span>
+                                    <ngb-timepicker [(ngModel)]="timeEnd" [meridian]="true" name="timeEnd"></ngb-timepicker>
                                 </div>
-                                <div class="col-md-6 pull-right">
+                                <div class="col-md-4 pull-right">
+                                    <span class="input-group-addon col-md-4" id="basic-addon1">Hora Inicio</span>
+                                    <ngb-timepicker [(ngModel)]="timeStart" [meridian]="true" name="timeStart"></ngb-timepicker>
+                                </div>
+                                <div class="col-md-4 pull-right">
                                     <div class="col-md-12">
                                         <span class="input-group-addon col-md-4" id="basic-addon1">Fecha</span>
                                     </div>
