--- a/src/app/task/deliver-task/deliver-task.component.html
+++ b/src/app/task/deliver-task/deliver-task.component.html
@@ -23,7 +23,7 @@
         <div _ngcontent-c7="" class="row">
           <div _ngcontent-c7="" class="col-md-12">
             <div _ngcontent-c7="" class="form-group"><label _ngcontent-c7="">Mi tarea:</label><textarea _ngcontent-c7=""
-                class="form-control"  placeholder="Aqui escribes tu tarea"  [(ngModel)]="task.studentPresentation"></textarea></div>
+                class="form-control"  placeholder="Aqui escribes tu tarea"  [(ngModel)]="task.studentPresentation" name="studentPresentation"></textarea></div>
           </div>
         </div>
         <div class="panel-footer">
