--- a/src/app/exam/exam-student/exam-student.component.html
+++ b/src/app/exam/exam-student/exam-student.component.html
@@ -9,13 +9,13 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="card" *ngFor="let question of questions; let i = index">
+                    <div class="card" *ngFor="let item of exam; let i = index">
                         <div class="card-body">
-                            <span class="input-group-addon" id="basic-addon1">{{i + 1}}.- {{question.value}}</span>
+                            <span class="input-group-addon" id="basic-addon1">{{i + 1}}.- {{item.question.value}}</span>
                             <div class="card-body center-block">
                                 <select class="form-control" (change)="onChange(i, $event.target.value)">
-                                    <option>Select...</option>
-                                    <option *ngFor="let answer of question.answers" [value]="answer.asnwerId">
+                                    <option>Seleccione...</option>
+                                    <option *ngFor="let answer of item.answers" [value]="answer.asnwerId">
                                         {{answer.value}}
                                     </option>
                                 </select>
