--- a/src/app/grade/grade.component.html
+++ b/src/app/grade/grade.component.html
@@ -22,13 +22,13 @@
                     <tbody>
                         <tr *ngFor="let grade of gradeList">
                             <td>
-                                {{grade.student.name}}
+                                {{grade.student}}
                             </td>
                             <td>
-                                {{grade.course.name}}
+                                {{grade.course}}
                             </td>
                             <td >
-                                {{grade.value}}
+                                {{grade.grade}}
                             </td>
                         </tr>
                     </tbody>
